auto_ui_test/log/25-07-23/003/log.txt
2025-07-23 18:11:41.329	exec/script.go:35	开始执行F:\code\auto_ui_test\product3\4252.py于2025-07-23 18:11:41。
2025-07-23 18:11:41.601	exec/script.go:49	  File "F:\code\auto_ui_test\product3\4252.py", line 11
    print(pass)
          ^^^^
SyntaxError: invalid syntax

2025-07-23 18:11:41.689	exec/script.go:64	结束执行F:\code\auto_ui_test\product3\4252.py于2025-07-23 18:11:41。
2025-07-23 18:11:41.819	exec/report-ztf.go:36	------------------------------------------------------------------------------------------------------------------------
失败用例详情
用例1: [F:\code\auto_ui_test\product3\4252.py] [5G guest_WIFI_修改局域网子网掩码]
步骤11361: 失败 [连接guest_WIFI]
[期望]  guest_WIFI正常连接
[实际]  

------------------------------------------------------------------------------------------------------------------------
